// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check at correctly loaded, and eats its own tail Load span with style and space 1`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": "]]",
      "dropDownNameEndTag": "::",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "[[",
      "dropDownValueSeparator": "||",
      "styleEndTag": ">>",
      "styleNameEndTag": "::",
      "styleStartTag": "<<",
    },
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": "shiny",
  "text": "@Hello world",
  "type": "at",
}
`;

exports[`Check at correctly loaded, and eats its own tail Load word 1`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": "]]",
      "dropDownNameEndTag": "::",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "[[",
      "dropDownValueSeparator": "||",
      "styleEndTag": ">>",
      "styleNameEndTag": "::",
      "styleStartTag": "<<",
    },
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": undefined,
  "text": "@Hello",
  "type": "at",
}
`;

exports[`Check at correctly loaded, and eats its own tail Load word with style 1`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": "]]",
      "dropDownNameEndTag": "::",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "[[",
      "dropDownValueSeparator": "||",
      "styleEndTag": ">>",
      "styleNameEndTag": "::",
      "styleStartTag": "<<",
    },
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": "shiny",
  "text": "@Hello",
  "type": "at",
}
`;
